--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
             </div>
+            <div class="destination" id="Algerie">
+                <h2>Algerie</h2>
+            </div>
+            <div class="destination" id="Tunisia">
+                <h2>Tunisia</h2>
+            </div>            
         </div>
     </div>
 
